ribbit/tests/ui/variant_nonzero.stderr
error: Non-zero enum requires either all non-zero discriminants *or* variant with discriminant 0 to be non-zero
 --> tests/ui/variant_nonzero.rs:7:5
  |
7 |     #[ribbit(size = 8)]
  |     ^
